--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "dependencies": {
     "@fontsource/outfit": "^5.1.1",
     "@fontsource/roboto": "^5.1.1",
+    "@tailwindcss/vite": "^4.1.8",
     "aos": "^2.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.5",
+    "react-scroll": "^1.9.3",
     "react-type-animation": "^3.2.0",
-    "react-typing-animator": "^5.6.2"
+    "react-typing-animator": "^5.6.2",
+    "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
